--- a/admin/src/app/core/navigation/navigation.component.html
+++ b/admin/src/app/core/navigation/navigation.component.html
@@ -1,5 +1,13 @@
-<!--<button mat-icon-button [matMenuTriggerFor]="menu">-->
-<button mat-icon-button>
+<mat-toolbar color="primary">
+  <span>Application Title</span>
+
+  <!-- This fills the remaining space of the current row -->
+  <span class="fill-remaining-space"></span>
+
+  <span>Right Aligned Text</span>
+</mat-toolbar>
+
+<button mat-icon-button [matMenuTriggerFor]="menu">
   <mat-icon>more_vert</mat-icon>
 </button>
 <mat-menu #menu="matMenu">
