--- a/admin/src/app/core/navigation/navigation.component.html
+++ b/admin/src/app/core/navigation/navigation.component.html
@@ -1,9 +1,7 @@
 <mat-toolbar color="primary">
   <a mat-button routerLink="/"><i class="material-icons">flight_takeoff</i> Features!</a>
 
-  <!-- This fills the remaining space of the current row -->
-  <span class="fill-remaining-space"></span>
+  <span class="spacer"></span>
 
   <a mat-button routerLink="/login"><i class="material-icons">person</i> Login</a>
 </mat-toolbar>
-
