--- a/admin/src/app/core/footer/footer.component.html
+++ b/admin/src/app/core/footer/footer.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
   <span class="spacer"></span>
-  <span class="copyright">&copy; Vít Herain {{ yearCreated }}<span *ngIf="yearCreated !== currentYear"> - {{ currentYear }}</span></span>
+  <p class="copyright">&copy; Vít Herain {{ yearCreated }}<span *ngIf="yearCreated !== currentYear"> - {{ currentYear }}</span></p>
   <span class="spacer"></span>
 </mat-toolbar>
