--- a/admin/src/app/features/features.component.html
+++ b/admin/src/app/features/features.component.html
@@ -42,7 +42,8 @@
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"
+             (click)="selection.toggle(row)"></mat-row>
   </mat-table>
 
   <mat-paginator #paginator
