--- a/admin/src/app/features/features.component.html
+++ b/admin/src/app/features/features.component.html
@@ -47,8 +47,8 @@
   </mat-table>
 
   <mat-paginator #paginator
-                 [pageSize]="10"
-                 [pageSizeOptions]="[5, 10, 20]"
+                 [pageSize]="defaultPageSize"
+                 [pageSizeOptions]="defaultPageSizeOptions"
                  [showFirstLastButtons]="true">
   </mat-paginator>
 </div>
