--- a/admin/src/app/features/components/features-list/features-list.component.html
+++ b/admin/src/app/features/components/features-list/features-list.component.html
@@ -1,43 +1,46 @@
 <div class="table-container mat-elevation-z8">
   <mat-table #table [dataSource]="dataSource" matSort>
-
-    <!-- Checkbox Column -->
-    <ng-container matColumnDef="select">
-      <mat-header-cell *matHeaderCellDef>
-        <mat-checkbox (change)="$event ? masterToggle() : null"
-                      [checked]="selection.hasValue() && isAllSelected()"
-                      [indeterminate]="selection.hasValue() && !isAllSelected()">
-        </mat-checkbox>
-      </mat-header-cell>
-      <mat-cell *matCellDef="let row">
-        <mat-checkbox (click)="$event.stopPropagation()"
-                      (change)="$event ? selection.toggle(row) : null"
-                      [checked]="selection.isSelected(row)">
-        </mat-checkbox>
-      </mat-cell>
-    </ng-container>
-
-    <!-- ID Column -->
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> ID. </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.id}} </mat-cell>
-    </ng-container>
-
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+      <mat-cell *matCellDef="let element">
+        <span class="feature-name">{{element.name}}</span>
+      </mat-cell>
     </ng-container>
 
-    <!-- Version Column -->
-    <ng-container matColumnDef="version">
-      <mat-header-cell *matHeaderCellDef> Version </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{element.version}} </mat-cell>
+    <!-- Added Column -->
+    <ng-container matColumnDef="added">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Added </mat-header-cell>
+      <mat-cell *matCellDef="let element" class="feature-name"> {{element.addedTime}} </mat-cell>
+    </ng-container>
+
+    <!-- Key Column -->
+    <ng-container matColumnDef="key">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Key </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.key}} </mat-cell>
+    </ng-container>
+
+    <!-- Targeting Column -->
+    <ng-container matColumnDef="targeting">
+      <mat-header-cell *matHeaderCellDef> Targeting </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <mat-slide-toggle color="primary" checked="true"></mat-slide-toggle>
+      </mat-cell>
+    </ng-container>
+
+    <!-- Actions Column -->
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        <button mat-button color="warn">
+          <i class="material-icons">delete_sweep</i>
+          Delete
+        </button>
+      </mat-cell>
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"
-             (click)="selection.toggle(row)"></mat-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
   </mat-table>
 
   <mat-paginator #paginator
