--- a/admin/src/app/features/components/features-list/features-list.component.scss
+++ b/admin/src/app/features/components/features-list/features-list.component.scss
@@ -1,3 +1,15 @@
+.spinner-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(1, 1, 1, 0.1);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .table-container {
   display: flex;
   flex-direction: column;
