--- a/admin/src/app/features/components/features-list/features-list.component.html
+++ b/admin/src/app/features/components/features-list/features-list.component.html
@@ -46,6 +46,10 @@
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
       <mat-cell *matCellDef="let element">
+        <button mat-button color="primary">
+          <i class="material-icons">mode_edit</i>
+          Edit
+        </button>
         <button mat-button color="warn">
           <i class="material-icons">delete_sweep</i>
           Delete
