Added dummy sidenav

--- a/admin/src/app/features/components/features/features.component.html
+++ b/admin/src/app/features/components/features/features.component.html
@@ -1,3 +1,10 @@
-<h1>Features</h1>
+<mat-sidenav-container class="example-container">
+  <mat-sidenav #sidenav mode="side" [opened]="true">
+    Sidenav content
+  </mat-sidenav>
 
-<router-outlet></router-outlet>
+  <mat-sidenav-content>
+    <h1>Features</h1>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
