--- a/admin/src/app/features/components/features/features.component.html
+++ b/admin/src/app/features/components/features/features.component.html
@@ -4,7 +4,10 @@
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <h1>Features</h1>
+    <app-route-header>
+      <h1>Features</h1>
+    </app-route-header>
+
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
