--- a/admin/src/app/core/footer/footer.component.scss
+++ b/admin/src/app/core/footer/footer.component.scss
@@ -1,3 +1,30 @@
+:host {
+  padding: 12px;
+  font-size: 12px;
+  color: white;
+  margin-top: 40px;
+  display: block;
+  background-color: #3f51b5;
+}
+
+.footer-list {
+  align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 8px;
+
+  & > .footer-list-item {
+    flex: 1;
+  }
+
+  & > .copyright {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    min-width: 225px;
+  }
+}
+
 p {
   font-size: 14px;
 }
