--- a/admin/src/app/core/footer/footer.component.html
+++ b/admin/src/app/core/footer/footer.component.html
@@ -1,9 +1,5 @@
-<div>
-  <div class="footer-list">
-    <div class="footer-list-item"></div>
-    <div class="footer-list-item"></div>
-    <div class="copyright">&copy; Vít Herain {{ yearCreated }}<span *ngIf="yearCreated !== currentYear"> - {{ currentYear }}</span></div>
-  </div>
+<mat-toolbar color="primary">
   <span class="spacer"></span>
+  <p class="copyright">&copy; Vít Herain {{ yearCreated }}<span *ngIf="yearCreated !== currentYear"> - {{ currentYear }}</span></p>
   <span class="spacer"></span>
-</div>
+</mat-toolbar>
