--- a/admin/src/styles.scss
+++ b/admin/src/styles.scss
@@ -1,5 +1,14 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
+* {
+  margin: 0;
+}
+
+html,
+body {
+  height: 100%;
+}
+
 .spacer {
   flex: 1 1 auto;
 }
