--- a/admin/src/app/core/navigation/navigation.component.html
+++ b/admin/src/app/core/navigation/navigation.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary">
-  <a mat-button routerLink="/"><i class="material-icons">flight_takeoff</i> Features!</a>
+<mat-toolbar color="primary" class="menu">
+  <a mat-button routerLink="/"><i class="material-icons">flight_takeoff</i> Features</a>
 
   <span class="spacer"></span>
 
