--- a/admin/src/app/shared/components/route-header/route-header.component.scss
+++ b/admin/src/app/shared/components/route-header/route-header.component.scss
@@ -1,4 +1,12 @@
 :host {
   background-color: #3f51b5;
+  color: white;
   display: flex;
+
+}
+
+h1 {
+  padding: 28px 8px;
+  font-size: 20px;
+  font-weight: 300;
 }
