Route-header component redesigned

--- a/admin/src/app/features/components/features/features.component.html
+++ b/admin/src/app/features/components/features/features.component.html
@@ -1,6 +1,4 @@
-<app-route-header>
-  <h1>Features</h1>
-</app-route-header>
+<app-route-header header="Features"></app-route-header>
 
 <mat-sidenav-container class="example-container">
   <mat-sidenav-content>
