--- a/admin/src/app/shared/components/route-header/route-header.component.scss
+++ b/admin/src/app/shared/components/route-header/route-header.component.scss
@@ -3,10 +3,9 @@
   color: white;
   display: flex;
 
-}
-
-h1 {
-  padding: 28px 8px;
-  font-size: 20px;
-  font-weight: 300;
+  & > h1 {
+    padding: 28px 28px;
+    font-size: 20px;
+    font-weight: 300;
+  }
 }
