Added some model classes

--- a/admin/src/app/core/navigation/navigation.component.html
+++ b/admin/src/app/core/navigation/navigation.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar color="primary" class="menu">
   <a mat-button routerLink="/"><i class="material-icons">flight_takeoff</i> Features</a>
+  <a mat-button routerLink="/projects"><i class="material-icons">domain</i> Projects</a>
+  <a mat-button routerLink="/console"><i class="material-icons">wb_sunny</i> Stream</a>
+  <a mat-button routerLink="/console"><i class="material-icons">content_paste</i> Audit log</a>
 
   <span class="spacer"></span>
 
