--- a/admin/src/app/features/components/features/features.component.html
+++ b/admin/src/app/features/components/features/features.component.html
@@ -9,6 +9,12 @@
   </mat-sidenav-content>
 
   <mat-sidenav #sidenav mode="side" [opened]="true">
-    Sidenav content
+    <mat-nav-list>
+      <a mat-list-item>
+        <button mat-icon-button (click)="showInfo(link)">
+          
+        </button>
+      </a>
+    </mat-nav-list>
   </mat-sidenav>
 </mat-sidenav-container>
