--- a/admin/src/app/features/components/features/features.component.html
+++ b/admin/src/app/features/components/features/features.component.html
@@ -11,7 +11,7 @@
   <mat-sidenav #sidenav mode="side" [opened]="true">
     <mat-nav-list>
       <a mat-list-item>
-        <button mat-icon-button *ngFor="let project of (projects$ | async)">
+        <button mat-icon-button *ngFor="let project of (projects$ | async).content">
           {{project.name}}
         </button>
       </a>
