--- a/admin/src/app/features/components/features/features.component.scss
+++ b/admin/src/app/features/components/features/features.component.scss
@@ -2,3 +2,9 @@
   display: flex;
   flex-direction: column;
 }
+
+.sidenav-toggle {
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: 10px;
+}
