Sidenav main content has height 100%

--- a/admin/src/app/features/components/features/features.component.html
+++ b/admin/src/app/features/components/features/features.component.html
@@ -8,7 +8,7 @@
   </button>
 </app-route-header>
 
-<mat-sidenav-container class="example-container">
+<mat-sidenav-container class="sidenav-container">
   <mat-sidenav-content>
     <div class="sidenav-content-wrapper">
 
