--- a/admin/src/app/features/components/features-list/features-list.component.html
+++ b/admin/src/app/features/components/features-list/features-list.component.html
@@ -1,4 +1,4 @@
-<div class="table-container mat-elevation-z8">
+<div class="table-container mat-elevation-z8" [hidden]="!(selectedProject$ | async)">
   <div class="spinner-container" *ngIf="dataSource.loading$ | async">
     <mat-spinner></mat-spinner>
   </div>
