--- a/admin/src/styles.scss
+++ b/admin/src/styles.scss
@@ -2,7 +2,7 @@
 
 * {
   margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
 html,
@@ -12,4 +12,8 @@ body {
 
 .spacer {
   flex: 1 1 auto;
+}
+
+[hidden] {
+  display: none !important;
 }
