Some things related to feature targetings

--- a/admin/src/app/features/components/features-list/features-list.component.html
+++ b/admin/src/app/features/components/features-list/features-list.component.html
@@ -39,7 +39,7 @@
     <ng-container matColumnDef="targeting">
       <mat-header-cell *matHeaderCellDef> Targeting </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <mat-slide-toggle color="primary" checked="true"></mat-slide-toggle>
+        <mat-slide-toggle color="primary" [checked]="true"></mat-slide-toggle>
       </mat-cell>
     </ng-container>
 
