--- a/admin/src/app/features/components/delete-feature-dialog/delete-feature-dialog.component.html
+++ b/admin/src/app/features/components/delete-feature-dialog/delete-feature-dialog.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Delete feature {{data.feature.key}}?</h1>
+<h1 mat-dialog-title>Delete feature {{data.featureTargeting.feature.key}}?</h1>
 <div mat-dialog-content>
   <p>Please type feature's key again and then submit if you are really sure it can be deleted.</p>
   <mat-form-field>
@@ -7,7 +7,7 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-button color="warn" [mat-dialog-close]="true" [disabled]="repeatKey !== data.feature.key">
+  <button mat-button color="warn" [mat-dialog-close]="true" [disabled]="repeatKey !== data.featureTargeting.feature.key">
     <i class="material-icons">delete_sweep</i>
     Delete
   </button>
